# endo-learn

./: .commitizen.toml  .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  train.sh
src/: main.py
src/datasets/: endoscopy_dataset.py
src/models/: efficientnet.py  model_manager.py  resnet.py  vgg.py  vit.py
src/trainers/: scheduler.py  trainer.py
src/transforms/: base_transforms.py
